<resources>
    <string name="app_name">Notes</string>

    <!-- text variables used -->
    <string name="sign_in">Вход</string>
    <string name="name">Введите имя</string>
    <string name="enter_your_email">Введите почту</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="not_registredet">Не зарегистрирован?</string>
    <string name="sign_up">Регистрация</string>
    <string name="repet_enter_your_password">Повторите пароль</string>
    <string name="registradet">Уже зарегистрирован!</string>
    <string name="title">Заголовок</string>
    <string name="text">Текст</string>
    <string name="data_creation">дата создания</string>
    <string name="sign_in_guest">Войти как гость</string>


    <!-- menu -->
    <string name="nav_notes">Заметки</string>
    <string name="nav_archives">Архив</string>
    <string name="nav_trash">Корзина</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about">О приложении</string>
    <string name="nav_exit">Выход</string>

    <!-- About -->
    <string name="about_version_app">Версия 0.0.0.1</string>
    <string name="about_avtor_app">Разработчик: Semenov Matvey</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
