<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notes_book"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/nav_notes"
            />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/nav_archives"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/nav_trash"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_settings"
            />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/nav_about"
            />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_round_exit_to_app_24"
            android:title="@string/nav_exit"
            />
    </group>
</menu>