<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notes_book"
            android:icon="@drawable/ic_baseline_notes_24"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/archive_while"
            android:title="@string/nav_archives" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/delete"
            android:title="@string/nav_trash" />
    </group>

    <item android:title="Приложение">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/nav_about" />
        </menu>
    </item>
    <item android:title="Аккаунт">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/nav_exit" />
        </menu>

    </item>


</menu>
