<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    android:elevation="8dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="8dp"
            android:textStyle="normal"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:text="@string/data_creation"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>


</androidx.cardview.widget.CardView>